# az-scout-plugin-bdd-sku

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
dev/: docker-compose.yml  plugin-config.example.toml
infra/: container-apps.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: .gitignore  Dockerfile  README.md  pyproject.toml
ingestion/app/: main.py
ingestion/app/collectors/: azure_pricing_collector.py  azure_spot_collector.py
ingestion/app/core/: base_collector.py  orchestrator.py
ingestion/app/shared/: config.py  pg_client.py
migration/: .env.example  README.md  alter_unique.sql  migrate_adx_to_pg.py  requirements.txt
openapi/: v1.yaml
postgresql/: docker-compose.yml  plugin-config.example.toml
price-aggregator-job/: Dockerfile  pyproject.toml
price-aggregator-job/src/price_aggregator_job/: __main__.py  config.py  db.py  main.py  sql.py
price-aggregator-job/tests/: test_aggregator.py
sku-mapper-job/src/sku_mapper_job/: main.py  parser.py  sql.py
sku-mapper-job/tests/: test_parser.py
sql/: schema.sql
src/az_scout_bdd_sku/: __init__.py  api_client.py  db.py  db_api.py  plugin_config.py  plugin_routes.py  routes.py  tools.py  validation.py
src/az_scout_bdd_sku/static/css/: bdd-sku.css
src/az_scout_bdd_sku/static/html/: bdd-sku-tab.html
src/az_scout_bdd_sku/static/js/: bdd-sku-tab.js
src/az_scout_plugin_bdd_sku/: __init__.py  config.py  db.py  mcp_tools.py  models.py  routes.py
src/az_scout_plugin_bdd_sku/service/: __init__.py  locks.py  retail_pricing.py  spot_data.py
src/az_scout_plugin_bdd_sku/sql/: schema.sql
src/az_scout_plugin_bdd_sku/static/css/: bdd-sku.css
src/az_scout_plugin_bdd_sku/static/html/: bdd-sku.html
src/az_scout_plugin_bdd_sku/static/js/: bdd-sku.js
tests/: __init__.py  test_bdd_sku.py  test_config.py  test_locks.py  test_mcp_tools.py  test_retail_service.py  test_routes.py  test_spot_service.py
