[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "az-scout-bdd-sku"
version = "0.1.0"
description = "az-scout plugin: BDD SKU – PostgreSQL cache for VM retail pricing, Spot price history & eviction rates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "az-scout",
    "fastapi",
    "psycopg[binary,pool]>=3.1",
    "azure-identity",
    "requests",
]

[project.urls]
Homepage = "https://github.com/rsabile/az-scout-plugin-bdd-sku"
Repository = "https://github.com/rsabile/az-scout-plugin-bdd-sku"
Issues = "https://github.com/rsabile/az-scout-plugin-bdd-sku/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-requests>=2.31",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
bdd_sku = "az_scout_plugin_bdd_sku:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_plugin_bdd_sku"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["psycopg.*", "psycopg_pool.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
