[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "az-scout-bdd-sku"
dynamic = ["version"]
description = "SKU DB Cache plugin for az-scout – VM pricing, spot prices & eviction rates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "az-scout",
    "fastapi",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
]

[project.urls]
Homepage = "https://github.com/rsabile/az-scout-plugin-bdd-sku"
Repository = "https://github.com/rsabile/az-scout-plugin-bdd-sku"
Issues = "https://github.com/rsabile/az-scout-plugin-bdd-sku/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
bdd_sku = "az_scout_bdd_sku:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_bdd_sku"]

[tool.hatch.version]
source = "vcs"
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout_bdd_sku/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/az_scout_bdd_sku/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
