[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "price-aggregator-job"
version = "0.1.0"
description = "Batch job to pre-aggregate VM pricing statistics per region and category"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/price_aggregator_job"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
